<resources>
    <string name="app_name">Assignment</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="content_description">Assignment HT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_nav_khoan_thu">Khoản thu</string>
    <string name="title_nav_khoan_chi">Khoản chi</string>
    <string name="title_nav_thong_ke">Thống kê</string>
    <string name="title_nav_khac">Khác</string>
    <string name="title_nav_gioi_thieu">Giới thiệu</string>
    <string name="title_nav_dang_xuat">Đăng xuất</string>
    <string name="title_quan_ly_thu_chi">Quản lý thu chi</string>
</resources>
